--- a/application/package.json
+++ b/application/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --watch --progress --mode development"
   },
   "author": "LuckyDanyel",
   "license": "ISC",
