--- a/vue-2-components/package.json
+++ b/vue-2-components/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "vue-2-components",
+  "name": "application",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "dev": "webpack --watch --progress --mode development"
   },
-  "author": "",
+  "author": "LuckyDanyel",
   "license": "ISC",
-  "dependencies": {
-    "@types/backbone": "^1.4.5",
-    "@vue/composition-api": "^1.4.6",
-    "backbone": "1.2.3",
-    "backbone.epoxy": "^1.3.4",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3",
-    "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
-    "vue-router": "^3.5.3",
-    "vuex": "^3.6.0",
-    "vuex-composition-helpers": "^1.1.0",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^4.5.0",
-    "ts-loader": "^8.4.0",
-    "typescript": "^4.3.5",
-    "vue-loader": "^15.9.5",
-    "vue-template-compiler": "^2.6.12"
+    "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "ts-loader": "^9.4.4",
+    "vue-loader": "^17.2.2",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@vue/compiler-sfc": "^3.3.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "style-loader": "^3.3.3",
+    "vue": "^3.3.4",
+    "vuex": "^4.1.0"
   }
 }
